[gd_scene load_steps=13 format=3 uid="uid://cql7g6pk8tc4"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_u6sdk"]
[ext_resource type="FontFile" uid="uid://bbpfkh42uuigb" path="res://UI/nintendo-nes-font.ttf" id="2_y0q1a"]
[ext_resource type="AudioStream" uid="uid://bbf1rqpwbwa6" path="res://SFX/OptionSelect.wav" id="3_nbue3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncvyk"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wdu8m"]
font = ExtResource("2_y0q1a")

[sub_resource type="LabelSettings" id="LabelSettings_f1lhw"]
font = ExtResource("2_y0q1a")

[sub_resource type="LabelSettings" id="LabelSettings_2imud"]
font = ExtResource("2_y0q1a")

[sub_resource type="LabelSettings" id="LabelSettings_4haq5"]
font = ExtResource("2_y0q1a")

[sub_resource type="LabelSettings" id="LabelSettings_cv7yb"]
font = ExtResource("2_y0q1a")

[sub_resource type="Animation" id="Animation_yb8e0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q1a0e"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n31wg"]
_data = {
"RESET": SubResource("Animation_yb8e0"),
"blink": SubResource("Animation_q1a0e")
}

[node name="Controls" type="CanvasLayer"]
script = ExtResource("1_u6sdk")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ncvyk")

[node name="ControlsContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="Rows" type="VBoxContainer" parent="PanelContainer/ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="MovementText" type="Label" parent="PanelContainer/ControlsContainer/Rows"]
layout_mode = 2
text = "MOVEMENT: LEFT, RIGHT ARROW"
label_settings = SubResource("LabelSettings_wdu8m")

[node name="JumpText" type="Label" parent="PanelContainer/ControlsContainer/Rows"]
layout_mode = 2
text = "JUMP: X KEY"
label_settings = SubResource("LabelSettings_f1lhw")

[node name="AttackText" type="Label" parent="PanelContainer/ControlsContainer/Rows"]
layout_mode = 2
text = "ATTACK: Z KEY"
label_settings = SubResource("LabelSettings_2imud")

[node name="TitleContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 300

[node name="TitleText" type="Label" parent="PanelContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTROLS"
label_settings = SubResource("LabelSettings_4haq5")
horizontal_alignment = 1

[node name="BackContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 300

[node name="BackText" type="Label" parent="PanelContainer/BackContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"
label_settings = SubResource("LabelSettings_cv7yb")
horizontal_alignment = 1

[node name="BackAnim" type="AnimationPlayer" parent="PanelContainer/BackContainer/BackText"]
libraries = {
"": SubResource("AnimationLibrary_n31wg")
}

[node name="ControlsTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="OptionAccepted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nbue3")

[connection signal="timeout" from="ControlsTimer" to="." method="_on_controls_timer_timeout"]
